changes to interlinked services

--- a/service1/application/templates/home.html
+++ b/service1/application/templates/home.html
@@ -1,5 +1,8 @@
-<p><h1>Email Generator</h1>
-
-
-
-</p>
+<head>
+    <title>Email Generator</title>
+</head>
+  
+<body>
+    <p>Hello and Welcome, generate your email address by clicking <a href="{{ url_for('generate'}}"> here.</a></p>
+</body>
+  
