--- a/service1/application/templates/genereate.html
+++ b/service1/application/templates/genereate.html
@@ -1,3 +1,4 @@
+{% block body_content %}
 <head>
     <title>Email Generator</title>
 </head>
@@ -5,4 +6,5 @@
 <body>
     <p>Hello and Welcome, generate your email address by clicking <a href="{{ url_for('generate'}}"> here.</a></p>
 </body>
+{% endblock %}
   
