--- a/service1/application/templates/generate.html
+++ b/service1/application/templates/generate.html
@@ -5,9 +5,8 @@
 </head>
   
 <body>
-    <p>Hello and Welcome, generate your email address by clicking <a href="{{ url_for('generate') }}"> here.</a></p>
-    <br>
-    <p> {{ email1 }} </p>
+    <p>Hello and Welcome, generate your email address by clicking <a href="{{ url_for('generate') }}"> here</a></p>
+
 </body>
 {% endblock %}
   
