changed user inventory

--- a/service1/application/templates/home.html
+++ b/service1/application/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block body_content %}
-<p><h1>All Emails</h1></p>
+<p><h1>All Emails Can be Viewed Here</h1></p>
 {% if email %}
 {% for entry in email %}
 	<div>
