--- a/service1/application/templates/generate.html
+++ b/service1/application/templates/generate.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-    <p>Hello and Welcome, generate your email address by clicking <a href="{{ url_for('generate') }}"> here</a></p>
+    <p>Hello and welcome, generate your email address by clicking <a href="{{ url_for('generate') }}"> here</a></p>
 </body>
 {% endblock %}
   
